fix: added library path